k8s/overlays/aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payments-api-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: project=tech-challenge-payments
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /webhooks/mercadopago
            pathType: Prefix
            backend:
              service:
                name: payments-api-svc
                port:
                  number: 80
